--- a/platforms/emulator/runtime/userspace/apps/user/Cargo.toml
+++ b/platforms/emulator/runtime/userspace/apps/user/Cargo.toml
@@ -28,6 +28,7 @@ pldm-lib.workspace = true
 romtime.workspace = true
 spdm-lib.workspace = true
 zerocopy.workspace = true
+bitfield.workspace = true
 
 [target.'cfg(not(target_arch = "riscv32"))'.dependencies]
 libtock_unittest.workspace = true
