--- a/tests/spdm_responder_validator/Cargo.toml
+++ b/tests/spdm_responder_validator/Cargo.toml
@@ -1,7 +1,7 @@
 # Licensed under the Apache-2.0 license
 
 [package]
-name = "tests-integration"
+name = "tests-spdm-responder-validator"
 version = "0.1.0"
 edition = "2021"
 
