--- a/tests/spdm_responder_validator/Cargo.toml
+++ b/tests/spdm_responder_validator/Cargo.toml
@@ -13,7 +13,12 @@ flash-image.workspace = true
 mcu-builder.workspace = true
 mcu-config.workspace = true
 mcu-config-emulator.workspace = true
+mcu-rom-common.workspace = true
+mcu-hw-model = { path = "../../hw/model", features = [ "fpga_realtime" ]}
 pldm-fw-pkg.workspace = true
 tempfile.workspace = true
 uuid.workspace = true
 zerocopy.workspace = true
+
+emulator = {path = "../../emulator/app" }
+emulator-periph = { path = "../../emulator/periph" }
