Add Support for Unprovisioned Security State; Sync Caliptra Security State with MCU Security State (#661)
* Sync Caliptra Security State with MCU MCI Security State

* Create manufacturing mode enum

* cargo fmt

* nit

* cargo fmt

* Change manufacturing_mode to device_security_state

* DeviceLifecycle changes

* cargo fmt

* nit

* Some nits, cargo fmt

---------

Co-authored-by: chrisherczeg <chrisherczeg@microsoft.com>

--- a/emulator/app/Cargo.toml
+++ b/emulator/app/Cargo.toml
@@ -15,6 +15,7 @@ caliptra-emu-periph.workspace = true
 caliptra-util-host-mailbox-test-config.workspace = true
 caliptra-mailbox-server.workspace = true
 caliptra-emu-types.workspace = true
+caliptra-api-types.workspace = true
 caliptra-image-types.workspace = true
 chrono.workspace = true
 clap.workspace = true
