firmware-bundler: bundle phase (#796)
* firmware-bundler: Move tbf header to own library (#705)

Move the tbf-header creation code to a separate library to allow use by
both the builder and firmware-bundler tooling.

* firmware-bundler: Add clone to tbf header (#705)

Add the clone attribute to the tbf header, to simplify utilization within
the firmware-bundler package.  The Header is simply binary data so
cloning it is acceptable.

* firmware-bundler: Fix kernel linker bug

Fix a kernel linker bug which improperly stated the length of RAM.  The
kernel needs to know about the entire length of RAM to properly allocate
memory for Apps when starting a process.  As part of this add a section
which details the App memory, so that portions of the memory space are
not double allocated between kernel and apps.

* firmware-bundler: Add bundling phase(#705)

Add a module which can take the output of the build phase, and for the
tockOS runtime bundle the kernel and user space applications.  This
includes generating the TBF header for the user space application which
must proceed the binary to be able to be loaded by the kernel.

As part of this adapt the currently existing framework to allow headers
and other information to flow through the build process.

Finally add the appropriate command support, so that a user can invoke
the bundle command.

* firmware-bundler: Make toml work for unit tests (#705)

Change the simple firmware bundle so that it works for unit test
scenarios.

Also address clippy concerns.

* firmware-bundler: Add initial doc (#705)

Add initial documentation for the `firmware-bundler` to the repo.  As
a first pass it documents the manifest file, and how to integrate the
tooling into an out of tree repository.

The initial documentation only covers the one pass budget style config,
additional work will add the two pass mechanism and thee appropriate
documentation.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,6 +62,7 @@ members = [
     "runtime/userspace/libtock/apis/kernel/low_level_debug",
     "runtime/userspace/libtock/apis/peripherals/alarm",
     "runtime/userspace/libtock/apis/peripherals/rng",
+    "runtime/userspace/libtock/tbf-header",
     "runtime/userspace/libtock/panic_handlers/debug_panic",
     "runtime/userspace/libtock/panic_handlers/small_panic",
     "runtime/userspace/libtock/platform",
@@ -238,6 +239,7 @@ libtock_rng = { path = "runtime/userspace/libtock/apis/peripherals/rng" }
 libtock_runtime = { path = "runtime/userspace/libtock/runtime" }
 libtock_small_panic = { path = "runtime/userspace/libtock/panic_handlers/small_panic" }
 libtock_unittest = { path = "runtime/userspace/libtock/unittest" }
+tbf-header = { path = "runtime/userspace/libtock/tbf-header" }
 
 # caliptra dependencies; keep git revs in sync
 caliptra-api = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "4972cba689922c5d0750b49e56603e310650ebca" }
