Add Network Coprocessor ROM support (#852)
* Add Network Coprocessor ROM support

- Add a new instance of RISCv5 emulator for Network CPU
- Add network CPU in emulator model.
- Add build infrastructure for network ROM
- Implement network ROM hello world test
- Add network build in xtask and firmware binaries
- Add model-based integration test to verify network CPU boots and
prints network CPU ROM banner

* Exclude network-rom from nextest archive in CI

The network-rom binary is a RISC-V ROM that has a dummy main on host
builds which just prints a message. This confuses nextest which expects
test output format. Exclude it from the test archive like other ROM
binaries.

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -277,6 +277,7 @@ jobs:
             --exclude example-app \
             --exclude libtock_unittest \
             --exclude syscalls_tests \
+            --exclude network-rom \
             --archive-file /tmp/nextest-archive.tar.zst
           sccache --show-stats
 
