--- a/tests/integration/Cargo.toml
+++ b/tests/integration/Cargo.toml
@@ -18,12 +18,17 @@ anyhow.workspace = true
 caliptra-api.workspace = true
 caliptra-api-types.workspace = true
 caliptra-builder.workspace = true
+caliptra-emu-bus.workspace = true
+caliptra-emu-cpu.workspace = true
+caliptra-emu-types.workspace = true
 caliptra-hw-model-types.workspace = true
 caliptra-hw-model.workspace = true
 caliptra-image-types.workspace = true
 caliptra-image-fake-keys.workspace = true
 chrono.workspace = true
 crc.workspace = true
+emulator-consts.workspace = true
+emulator-periph.workspace = true
 fips204.workspace = true
 flash-image.workspace = true
 hex.workspace = true
@@ -42,6 +47,7 @@ mcu-image-header.workspace = true
 mcu-mbox-common.workspace = true
 mcu-rom-common.workspace = true
 mcu-testing-common.workspace = true
+network-config.workspace = true
 p384 = { workspace = true, features = ["ecdsa"] }
 pldm-common.workspace = true
 pldm-fw-pkg.workspace = true
