Add lwIP network stack with Rust bindings and development tools (#858)
* Add lwIP network stack with Rust bindings and development tools

- Add lwIP as git submodule at network/net/lwip
- Add lwip-rs: no_std Rust FFI bindings for lwIP
  - DHCP client support
  - TFTP client with callback-based storage for no_std
  - TAP network interface for Linux development
- Add lwip-rs-example: DHCP+TFTP boot demonstration app
- Add network-xtask: CLI toolkit for network development
  - TAP interface management (setup/teardown/status)
  - dnsmasq DHCP/TFTP server management
  - Build utilities with package name support
- Add integration tests in tests/integration/src/network/
- Update main xtask with 'network' subcommand delegation
- Add dnsmasq and TAP setup to CI workflow

* Refactor: move network xtask to main xtask and fix per-netif callbacks

- Move network/xtask commands into xtask/src/network/ module
- Add rom-build subcommand under network (moved from NetworkRomBuild)
- Fix unsafe global callback issue: use atomic pointer registry for per-netif callbacks instead of storing in netif->state (which was overwritten by tapif driver)
- Update Cargo.toml files to use workspace-inherited version/edition
- Clean up verbose comments in network Rust code
- Fix test import for ServerOptions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,9 @@ members = [
     "firmware-bundler",
     "hw/model",
     "hw/model/test-fw",
+    "network/app/example",
     "network/config",
+    "network/net/lwip-rs",
     "network/rom",
     "platforms/common",
     "platforms/emulator/config",
@@ -95,6 +97,7 @@ arrayvec = { version = "0.7.4", default-features = false }
 async-trait = "0.1.87"
 bitfield = "0.14.0"
 bitflags = "2.4.0"
+bindgen = "0.69"
 bit-vec = "0.6.3"
 cargo_metadata = "0.20.0"
 cbindgen = "0.24"
@@ -155,6 +158,7 @@ sha2 = { version = "0.10.8", default-features = false }
 sha3 = "0.10.8"
 simple_logger = "5.0.0"
 smlang = "0.8.0"
+spin = { version = "0.9", default-features = false, features = ["spin_mutex", "mutex"] }
 static_cell = "2.1.0"
 subst = "0.3.8"
 sudo = "0.6.0"
@@ -210,6 +214,7 @@ mcu-mbox-driver = { path = "platforms/emulator/runtime/kernel/drivers/mcu_mbox" 
 mcu-platforms-common = { path = "platforms/common" }
 mcu-rom-common = { path = "rom" }
 mcu-test-harness = {path = "platforms/test_harness"}
+lwip-rs = { path = "network/net/lwip-rs" }
 network-config = { path = "network/config" }
 network-rom = { path = "network/rom" }
 mcu-testing-common = { path = "common/testing" }
@@ -224,6 +229,7 @@ registers-generator = { path = "registers/generator" }
 registers-systemrdl = { path = "registers/systemrdl" }
 registers-systemrdl-new = { path = "registers/systemrdl-new" }
 romtime = { path = "romtime" }
+xtask = { path = "xtask" }
 
 # App related dependencies
 external-cmds-common = { path = "runtime/userspace/api/external-cmds-common" }
