--- a/tests/integration/Cargo.toml
+++ b/tests/integration/Cargo.toml
@@ -51,6 +51,7 @@ mcu-mbox-common.workspace = true
 mcu-rom-common.workspace = true
 mcu-testing-common.workspace = true
 network-config.workspace = true
+xtask.workspace = true
 p384 = { workspace = true, features = ["ecdsa"] }
 pldm-common.workspace = true
 pldm-fw-pkg.workspace = true
